--- a/WorldBank.Microservices.TransactionMicroservice.Api/WorldBank.Microservices.TransactionMicroservice.Api.csproj
+++ b/WorldBank.Microservices.TransactionMicroservice.Api/WorldBank.Microservices.TransactionMicroservice.Api.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\WorldBank.Microservices.TransferMicroservice.Domain\WorldBank.Microservices.TransactionMicroservice.Domain.csproj" />
   </ItemGroup>
 
