Added SignIn and SignUp.

--- a/WorldBank.App.UI.CrossPlatformApp/WorldBank.App.UI.CrossPlatformApp/WorldBank.App.UI.CrossPlatformApp.csproj
+++ b/WorldBank.App.UI.CrossPlatformApp/WorldBank.App.UI.CrossPlatformApp/WorldBank.App.UI.CrossPlatformApp.csproj
@@ -18,4 +18,13 @@
   <ItemGroup>
     <ProjectReference Include="..\..\WorldBank.App.Application\WorldBank.App.Application.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\SignInPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SignUpPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
