--- a/WorldBank.Common.Infra.DataAccess/WorldBank.Common.Infra.DataAccess.csproj
+++ b/WorldBank.Common.Infra.DataAccess/WorldBank.Common.Infra.DataAccess.csproj
@@ -1,8 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WorldBank.Common.Domain\WorldBank.Common.Domain.csproj" />
