--- a/WorldBank.Microservices.WalletMicroservice.Application.Api/WorldBank.Microservices.WalletMicroservice.Application.Api.csproj
+++ b/WorldBank.Microservices.WalletMicroservice.Application.Api/WorldBank.Microservices.WalletMicroservice.Application.Api.csproj
@@ -7,6 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +28,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WorldBank.Microservices.WalletMicroservice.Domain\WorldBank.Microservices.WalletMicroservice.Domain.csproj" />
+    <ProjectReference Include="..\WorldBank.Microservices.WalletMicroservice.Infra.DataAccess\WorldBank.Microservices.WalletMicroservice.Infra.DataAccess.csproj" />
   </ItemGroup>
 
 
